[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Terrain_Common/Bridge.png" type="Texture" id=1]
[ext_resource path="res://scenes/Platform.gd" type="Script" id=2]

[sub_resource type="TileSet" id=1]
0/name = "Bridge.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 32 )

[node name="Platform" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="PlatformBorder" type="StaticBody2D" parent="."]
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlatformBorder"]
build_mode = 1
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 64, 0, 64 )

[node name="PlatformBody" type="Area2D" parent="." groups=[
"platforms",
]]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformBody"]
position = Vector2( 64, 32 )
shape = SubResource( 2 )
[connection signal="draw" from="." to="." method="_on_Platform_draw"]
[connection signal="hide" from="." to="." method="_on_Platform_hide"]
[connection signal="body_entered" from="PlatformBody" to="." method="_on_PlatformBody_body_entered"]
[connection signal="body_exited" from="PlatformBody" to="." method="_on_PlatformBody_body_exited"]
